ec2/producao gráficos/Gráficos 24.09.24/eks/datahubprod/gateway dsstage.yaml
apiVersion: networking.istio.io/v1beta1
kind: Gateway
metadata:
  name: prometheus-gateway
  namespace: monitoring-system
spec:
  selector:
    istio: ingress
  servers:
  - hosts:
    - "prometheus.datahub-prod.br.experian.eeca"
    port:
      name: http
      number: 8080
      protocol: HTTP
